# strands-temporal-plugin

./: .gitignore  CHANGELOG.md  README.md  db001.db  lefthook.yml  minimal_test.py  mise.toml  pyproject.toml  repomix-output.md  simple_test.py  test_serialization.py
.agents/: openai_agent_example.md  reference_arch_oai_agents.md  strands_documentation.md  strands_models.md  strands_streaming.md  task_1_model_inference_activity.md  task_2_provider_configuration.md  task_3_agent_event_loop_workflow.md  task_4_plugin_configuration_system.md  task_5_agent_workflow_implementation.md  task_6_hooks_and_extensibility_system.md  task_7_public_api_and_exports.md  task_8_examples_and_testing.md  temporal_mental_model.md  use_pydantic_converter.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml  security.yml
docs/: PRD_SESSION_STATE_MANAGEMENT.md
examples/: README.md  TESTING_v2.md
examples/01_quickstart/: README.md  run_client.py  run_worker.py  workflow.py
examples/02_weather_agent/: README.md  run_client.py  run_worker.py  tools.py  workflow.py
examples/03_multi_tool_agent/: README.md  __init__.py  run_client.py  run_worker.py  tools.py  workflows.py
examples/04_mcp_stdio/: README.md  run_client.py  run_worker.py  workflow.py
examples/05_mcp_http/: README.md  run_client.py  run_worker.py  workflow.py
examples/06_structured_output/: README.md  models.py  run_client.py  run_worker.py  workflow.py
examples/07_session_management/: README.md  run_client.py  run_worker.py  tools.py  workflow.py
examples/08_custom_provider/: README.md  custom_model.py  run_client.py  run_worker.py  workflow.py
examples/09_failure_resilience/: README.md  run_client.py  run_worker.py  tools.py  workflow.py
examples/basic_weather_agent/: README.md  README_CLEAN.md  http_mcp_workflow.py  mcp_workflow.py  run_client.py  run_new_client.py  run_new_worker.py  run_worker.py  test_all_workflows.py  tools.py  weather_workflow.py  workflows.py
examples/mcp_agent/: README.md  run_client.py  run_worker.py  workflows.py
scripts/: macos_block_bedrock.sh  network_failure_test.py  release.sh  security-bandit.sh
src/strands_temporal_plugin/: __init__.py  activities.py  durable_agent.py  mcp_activities.py  plugin.py  runner.py  session.py  tool_executor.py  types.py
tests/: conftest.py
tests/integration/: README_FAILURE_TESTING.md  test_failure_simulation.py  test_workflow.py
tests/unit/: test_activities.py  test_durable_agent.py  test_mcp.py  test_mcp_activities.py  test_new_features.py  test_providers.py  test_replay.py  test_runner.py  test_session.py  test_tool_executor.py  test_types.py
